Add some CSS styling
Signed-off-by: W4TCH0UT <ateekujjawal@gmail.com>

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,12 @@ table {
 .mat-cell {
   padding: 16px 16px 16px 0;
 }
+
 .mat-header-cell {
   padding: 16px 16px 16px 0;
+  color: white;
 }
 
+tr.mat-header-row {
+	background-color: black;
+}
