--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,98 +4,105 @@
 <div *ngIf="dataSource != null">
 
   <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <mat-form-field>
-          <mat-label>Filter</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
-        </mat-form-field>
-      </div>
-      <div class="col-sm">
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-      </div>
-    </div>
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+    </mat-form-field>
+    <br>
+    <br>
+    <h1>
+      HIDE COLUMNS
+    </h1>
+    <form [formGroup]="form">
+      <mat-checkbox *ngFor="let cd of columnDefinitions"  [formControlName]="cd.def">{{cd.label}}</mat-checkbox>
+    </form>
   </div>
   <br>
   <br>
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-      <ng-container matColumnDef="LOOKUP_TYPE">
-        <th mat-header-cell *matHeaderCellDef> <b>LOOKUP_TYPE</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.LOOKUP_TYPE}} </td>
-      </ng-container>
+  <div class="overflow-container mx-auto">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <ng-container matColumnDef="LOOKUP_TYPE">
+          <th mat-header-cell *matHeaderCellDef> <b>LOOKUP_TYPE</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.LOOKUP_TYPE}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="LOOKUP_CODE">
-        <th mat-header-cell *matHeaderCellDef> <b>LOOKUP_CODE</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.LOOKUP_CODE}} </td>
-      </ng-container>
+        <ng-container matColumnDef="LOOKUP_CODE">
+          <th mat-header-cell *matHeaderCellDef> <b>LOOKUP_CODE</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.LOOKUP_CODE}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="DESCRIPTION">
-        <th mat-header-cell *matHeaderCellDef> <b>DESCRIPTION</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.DESCRIPTION}} </td>
-      </ng-container>
+        <ng-container matColumnDef="DESCRIPTION">
+          <th mat-header-cell *matHeaderCellDef> <b>DESCRIPTION</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.DESCRIPTION}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="ENABLED_FLAG">
-        <th mat-header-cell *matHeaderCellDef> <b>ENABLED_FLAG</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.ENABLED_FLAG}} </td>
-      </ng-container>
+        <ng-container matColumnDef="ENABLED_FLAG">
+          <th mat-header-cell *matHeaderCellDef> <b>ENABLED_FLAG</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.ENABLED_FLAG}} </td>
+        </ng-container>
 
-      <ng-container matColumnDef="START_DATE">
-        <th mat-header-cell *matHeaderCellDef> <b>START_DATE</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.START_DATE}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="START_DATE">
+          <th mat-header-cell *matHeaderCellDef> <b>START_DATE</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.START_DATE}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL1">
-        <th mat-header-cell *matHeaderCellDef> <b>COL1</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL1}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL1">
+          <th mat-header-cell *matHeaderCellDef> <b>COL1</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL1}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL2">
-        <th mat-header-cell *matHeaderCellDef> <b>COL2</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL2}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL2">
+          <th mat-header-cell *matHeaderCellDef> <b>COL2</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL2}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL3">
-        <th mat-header-cell *matHeaderCellDef> <b>COL3</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL3}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL3">
+          <th mat-header-cell *matHeaderCellDef> <b>COL3</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL3}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL4">
-        <th mat-header-cell *matHeaderCellDef> <b>COL4</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL4}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL4">
+          <th mat-header-cell *matHeaderCellDef> <b>COL4</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL4}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL5">
-        <th mat-header-cell *matHeaderCellDef> <b>COL5</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL5}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL5">
+          <th mat-header-cell *matHeaderCellDef> <b>COL5</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL5}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL6">
-        <th mat-header-cell *matHeaderCellDef> <b>COL6</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL6}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL6">
+          <th mat-header-cell *matHeaderCellDef> <b>COL6</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL6}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL7">
-        <th mat-header-cell *matHeaderCellDef> <b>COL7</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL7}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL7">
+          <th mat-header-cell *matHeaderCellDef> <b>COL7</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL7}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL18">
-        <th mat-header-cell *matHeaderCellDef> <b>COL18</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL18}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL18">
+          <th mat-header-cell *matHeaderCellDef> <b>COL18</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL18}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL19">
-        <th mat-header-cell *matHeaderCellDef> <b>COL19</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL19}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL19">
+          <th mat-header-cell *matHeaderCellDef> <b>COL19</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL19}} </td>
+        </ng-container>  
 
-      <ng-container matColumnDef="COL20">
-        <th mat-header-cell *matHeaderCellDef> <b>COL20</b> </th>
-        <td mat-cell *matCellDef="let element"> {{element.COL20}} </td>
-      </ng-container>  
+        <ng-container matColumnDef="COL20">
+          <th mat-header-cell *matHeaderCellDef> <b>COL20</b> </th>
+          <td mat-cell *matCellDef="let element"> {{element.COL20}} </td>
+        </ng-container>  
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <tr mat-header-row *matHeaderRowDef="getDisplayedColumns(); sticky:true"></tr>
+        <tr mat-row *matRowDef="let row; columns: getDisplayedColumns();"></tr>
+      </table>
+    </div>
+
+    <div class="paginator-container">
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
 
 </div>
