--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,10 +7,12 @@ table {
 }
 
 .overflow-container {
-	height: 90%;
+	height: 700px;
 	width: 85%;
 	overflow: auto;
-	padding: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
 }
 
 .mat-form-field {
@@ -31,7 +33,7 @@ table {
 }
 
 tr.mat-header-row {
-	background-color: black;
+	background-color: #007DB8;
 }
 
 mat-checkbox {
