--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-cell {
   text-align: center;
   justify-content:center;
+  font-size:12px;
 }
 
-.mat-row:nth-child(even){
-	background-color: gray;
-}
+.mat-checkbox-ripple .mat-ripple-element,.mat-checkbox-checked.mat-accent .mat-checkbox-background {
+background-color: #007DB8;}
