--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,77 +22,77 @@
   <div class="overflow-container mx-auto">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="LOOKUP_TYPE">
-          <th mat-header-cell *matHeaderCellDef> <b>LOOKUP_TYPE</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>LookupType</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.LOOKUP_TYPE}} </td>
         </ng-container>
 
         <ng-container matColumnDef="LOOKUP_CODE">
-          <th mat-header-cell *matHeaderCellDef> <b>LOOKUP_CODE</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>MonitorID</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.LOOKUP_CODE}} </td>
         </ng-container>
 
         <ng-container matColumnDef="DESCRIPTION">
-          <th mat-header-cell *matHeaderCellDef> <b>DESCRIPTION</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>MailBody</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.DESCRIPTION}} </td>
         </ng-container>
 
         <ng-container matColumnDef="ENABLED_FLAG">
-          <th mat-header-cell *matHeaderCellDef> <b>ENABLED_FLAG</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>EnabledFlag</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.ENABLED_FLAG}} </td>
         </ng-container>
 
         <ng-container matColumnDef="START_DATE">
-          <th mat-header-cell *matHeaderCellDef> <b>START_DATE</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>StartDate</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.START_DATE}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL1">
-          <th mat-header-cell *matHeaderCellDef> <b>COL1</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Col1</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL1}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL2">
-          <th mat-header-cell *matHeaderCellDef> <b>COL2</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>OrderBy</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL2}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL3">
-          <th mat-header-cell *matHeaderCellDef> <b>COL3</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>MoitorType</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL3}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL4">
-          <th mat-header-cell *matHeaderCellDef> <b>COL4</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>DateSelectType</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL4}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL5">
-          <th mat-header-cell *matHeaderCellDef> <b>COL5</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>FromEmail</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL5}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL6">
-          <th mat-header-cell *matHeaderCellDef> <b>COL6</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>ToEmail</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL6}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL7">
-          <th mat-header-cell *matHeaderCellDef> <b>COL7</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Col7</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL7}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL18">
-          <th mat-header-cell *matHeaderCellDef> <b>COL18</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Col18</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL18}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL19">
-          <th mat-header-cell *matHeaderCellDef> <b>COL19</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>LastFoundDate</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL19}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL20">
-          <th mat-header-cell *matHeaderCellDef> <b>COL20</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>LastRunDate</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL20}} </td>
         </ng-container>  
 
