--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<input type="file" (change)="onFileChange($event)" />
-
-
 <div *ngIf="dataSource != null">
 
   <div class="container">
@@ -21,78 +18,86 @@
   <br>
   <div class="overflow-container mx-auto">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+        <ng-container matColumnDef="STATUS">
+          <th mat-header-cell *matHeaderCellDef> <b>Status</b> </th>
+          <td mat-cell *matCellDef="let element">
+            <div class="color-box red" *ngIf="element.STATUS == 'red'"></div>
+            <div class="color-box green" *ngIf="element.STATUS == 'green'"></div>
+          </td>
+        </ng-container>  
+
         <ng-container matColumnDef="LOOKUP_TYPE">
-          <th mat-header-cell *matHeaderCellDef> <b>LookupType</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Lookup Type</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.LOOKUP_TYPE}} </td>
         </ng-container>
 
         <ng-container matColumnDef="LOOKUP_CODE">
-          <th mat-header-cell *matHeaderCellDef> <b>MonitorID</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Monitor ID</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.LOOKUP_CODE}} </td>
         </ng-container>
 
         <ng-container matColumnDef="DESCRIPTION">
-          <th mat-header-cell *matHeaderCellDef> <b>MailBody</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Mail Body</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.DESCRIPTION}} </td>
         </ng-container>
 
         <ng-container matColumnDef="ENABLED_FLAG">
-          <th mat-header-cell *matHeaderCellDef> <b>EnabledFlag</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Enabled Flag</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.ENABLED_FLAG}} </td>
         </ng-container>
 
         <ng-container matColumnDef="START_DATE">
-          <th mat-header-cell *matHeaderCellDef> <b>StartDate</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Start Date</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.START_DATE}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL1">
-          <th mat-header-cell *matHeaderCellDef> <b>Col1</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Interval(minutes)</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL1}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL2">
-          <th mat-header-cell *matHeaderCellDef> <b>OrderBy</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Order By</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL2}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL3">
-          <th mat-header-cell *matHeaderCellDef> <b>MoitorType</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Monitor Type</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL3}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL4">
-          <th mat-header-cell *matHeaderCellDef> <b>DateSelectType</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Date Select Type</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL4}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL5">
-          <th mat-header-cell *matHeaderCellDef> <b>FromEmail</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>From Email</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL5}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL6">
-          <th mat-header-cell *matHeaderCellDef> <b>ToEmail</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>To Email</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL6}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL7">
-          <th mat-header-cell *matHeaderCellDef> <b>Col7</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Col 7</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL7}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL18">
-          <th mat-header-cell *matHeaderCellDef> <b>Col18</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Last Run Status</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL18}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL19">
-          <th mat-header-cell *matHeaderCellDef> <b>LastFoundDate</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Last Found Date</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL19}} </td>
         </ng-container>  
 
         <ng-container matColumnDef="COL20">
-          <th mat-header-cell *matHeaderCellDef> <b>LastRunDate</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Last Run Date</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL20}} </td>
         </ng-container>  
 
