--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,7 +106,7 @@
         </ng-container>  
 
         <ng-container matColumnDef="COL7">
-          <th mat-header-cell *matHeaderCellDef> <b>Col 7</b> </th>
+          <th mat-header-cell *matHeaderCellDef> <b>Description</b> </th>
           <td mat-cell *matCellDef="let element"> {{element.COL7}} </td>
         </ng-container>  
 
