--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div style="background-color: #007DB8; width: 100%; height: 100px; text-align: center; margin: auto;">
+  <h1 style="color: white; font-size: 50px; padding-top: 30px;">iMAP Monitor Dashboard</h1>
+</div>
+
+
 <div *ngIf="dataSource != null" class="container4">
 
   <mat-card class="filter-card">
@@ -43,7 +48,7 @@
     <div class="overflow-container mx-auto">
       <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="STATUS">
-          <th mat-header-cell *matHeaderCellDef> <b>Status</b> </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> <b>Status</b> </th>
           <td mat-cell *matCellDef="let element">
             <div class="color-box red" *ngIf="element.STATUS == 'red'"></div>
             <div class="color-box green" *ngIf="element.STATUS == 'green'"></div>
