--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.mat-header-cell {
+.mat-header-cell{
   flex-direction: column;
   justify-content: center;
 }
@@ -12,6 +12,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   text-align: center;
   justify-content:center;
   font-size:12px;
+}
+
+.mat-sort-header-arrow {
+  color: white;
 }
 
 .mat-checkbox-ripple .mat-ripple-element,.mat-checkbox-checked.mat-accent .mat-checkbox-background {
