--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="background-color: #007DB8; width: 100%; height: 100px; text-align: center; margin: auto;">
-  <h1 style="color: white; font-size: 50px; padding-top: 30px;">iMAP Monitor Dashboard</h1>
+  <h1 style="color: white; font-size: 50px; padding-top: 30px;">iMAP Health Check</h1>
 </div>
 
 
