--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <div style="background-color: #007DB8; width: 100%; height: 100px; text-align: center;">
   <div class="row">
-    <div class="col-md-1">
-      <img src="assets/logo-dell.gif" style="padding-top: 10px">
-    </div>
-    <div class="col-md-2">
-      <h1 style="color: white; font-size: 30px; padding-top: 30px; margin-left: 0px">iMAP Health Check</h1>
+
+    <div class="col-md-3">
+      <h1 style="color: white; font-size: 30px; padding-top: 30px; margin-left: 0px">Database Visualizer</h1>
     </div>
   </div>
 </div>
